# autograph

./: CONTRIBUTION.md  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
autograph/: __init__.py
autograph/core/: __init__.py  enumstyle.py  plot.py  style.py
autograph/wrapper/: __init__.py  mpl.py  plotly.py
docs/: README.md  conf.py  index.rst
docs/md/: index.md  tutorial.md
example/: basic.ipynb
plots/: __init__.py  mpl.py  plot.py  plotly.py
plots/core/: plot.py  style.py
plots/wrapper/: mpl.py  plotly.py
tests/: test___init__.py
tests/wrapper/: test_mpl.py
